# gis-vigilant-memory

./: .env.example  .gitignore  ARCHITECTURE.md  DEMO_UI_DESIGNS.md  DEMO_UI_QUICKSTART.md  DEPLOYMENT_SPEC.md  DEVELOPER.md  EXTERNAL_COMPONENTS.md  GIS_AGENT_SPEC.md  INTERACTION_FLOW.md  LEARNINGS.md  NLP_INTERFACE.md  README.md  USAGE.md  demo_nlp.py  demo_ui.py  main.py  pyproject.toml  requirements.txt  test_mcp_server.py  test_with_curl.sh
.github/: copilot-instructions.md
src/gis_mcp_server/: __init__.py  server.py
src/gis_mcp_server/agents/: __init__.py  gis_agent.py
src/gis_mcp_server/tools/: __init__.py  distance_calculator.py  route_optimizer.py
tests/: test_gis_agent.py  test_gis_server.py
