[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gis-mcp-server"
version = "0.1.0"
description = "MCP GIS Server for distance calculations with LangChain NLP integration"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "GIS Team"}]
keywords = ["mcp", "gis", "langchain", "nlp", "freight", "distance-calculation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "geopy>=2.4.0",
    "httpx>=0.25.0",
    "streamlit>=1.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://gis-mcp.com"
Documentation = "https://gis-mcp.com/gis-ai-agent/"
Repository = "https://github.com/yourusername/gis-mcp-server"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
